--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Шаблоны сайтов</title>
+		<title>COVID-19</title>
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
@@ -11,7 +11,7 @@
 		<div class="wrapper">
 			<div class="header">
 				<div class="headerContent">
-					<div class="left"><h1><a href="#">Cherry</a></h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
+					<div class="left"><h1><a href="#">COVID-19</a></h1><p></p></div>
 					<div class="right">
 						<form class="search">
 							<input type="text" placeholder="Search...">
@@ -24,67 +24,29 @@
 				<div class="itemSlider">
 					<div class="bgSlide"><img src="images/bg-slide.jpg"></div>
 					<div class="descSlide">
-						<h1>Eaten berry</h1>
-						<p>and go for a walk</p>
-						<span>Duis aute irure dolor...</span>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<h1>Stay Home!</h1>
+						<p>Save lives</p>
+						<span>News every day!</span>
+						<p>Last updated: 6 April 02:10:04 UTC+7</p>
 					</div>
 				</div>
 			</div>
 			<div class="nav">
 				<ul class="menu">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Sliders</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Styles</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Cherry</a></li>
+					<li><a href="#">News</a></li>
+					<li><a href="#">Symptoms</a></li>
+					<li><a href="#">Prevention</a></li>
+					<li><a href="#">Age/Sex</a></li>
+					<li><a href="#">Incubation</a></li>
+					<li><a href="#">Spreads</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
-			<div class="breadcrumbs"><a href="#">Home</a> / <a href="#">Another Page</a> / This page</div>
+			
 			<div class="main">
 				<div class="leftCol">
-					<form>
-						<h2>Contact us</h2>
-						<input type="text" placeholder="Lorem ipsum">
-						<input type="text" placeholder="Dolor sit">
-						<input type="text" disabled="disabled" placeholder="Disabled">
-						<input type="text" placeholder="Consectetur">
-						<select>
-							<option>1</option>
-							<option>2</option>
-							<option>3</option>
-						</select>
-						<div class="row">
-							<h4>Radio</h4>
-							<input type="radio">
-							<label>Lorem ipsum dolor sit amet</label>
-							<div class="clear"></div>
-							<input type="radio">
-							<label>Duis aute irure dolor</label>
-							<div class="clear"></div>
-							<input type="radio">
-							<label>Excepteur sint occaecat</label>
-							<div class="clear"></div>
-						</div>
-						<div class="row">
-							<h4>Checkbox</h4>
-							<input type="checkbox" />
-							<label>Duis aute irure dolor</label>
-							<div class="clear"></div>
-							<input type="checkbox" />
-							<label>Excepteur sint occaecat</label>
-							<div class="clear"></div>
-						</div>
-						<button type="submit" class="minWidth">Lorem ipsum</button>
-						<button type="reset" class="minWidth">Reset</button>
-					</form>
-					<div class="row">
-						<h2>Headline</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<p><a href="#">More about</a></p>
-					</div>
+				
+					
 				</div>
 				<div class="rightCol">
 					<h1>What We Do…</h1>
@@ -97,7 +59,7 @@
 					<h1>Lists</h1>
 					<div class="row">
 						<div class="span">
-							<h4>List style type circle <code>&lt;ul&gt;</code></h4>
+							<h4>List style type circle </h4>
 							<ul>
 								<li>Lorem ipsum dolor sit amet</li>
 								<li>Sed ut perspiciatis unde</li>
@@ -142,58 +104,58 @@
 							</ol>
 						</div>
 					</div>
-					<h1>Tables</h1>
+					<h1>Statistics</h1>
 					<table>
 						<thead>
 							<tr>
 								<th>#</th>
-								<th>Lorem</th>
-								<th>Ipsum</th>
-								<th>Dolor</th>
-								<th>Sit</th>
-								<th>Amet</th>
+								<th>County</th>
+								<th>Population</th>
+								<th>Infected</th>
+								<th>Recovered</th>
+								<th>Deaths</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr>
 								<td>1</td>
-								<td>Lorem ipsum</td>
-								<td>At vero eos</td>
-								<td>Sed ut</td>
-								<td>Dolor sit amet</td>
-								<td><a href="#">Epd.</a></td>
+								<td>United States</td>
+								<td>329,573,451</td>
+								<td>311,658</td>
+								<td>14,967</td>
+								<td>8,492</td>
 							</tr>
 							<tr>
 								<td>2</td>
-								<td>Sed ut</td>
-								<td>Dolor sit amet</td>
-								<td>Lorem ipsum</td>
-								<td>At vero eos</td>
-								<td><a href="#">Epd.</a></td>
+								<td>Spain</td>
+								<td>47,100,396</td>
+								<td>130,759</td>
+								<td>38,080</td>
+								<td>12,418</td>
 							</tr>
 							<tr>
 								<td>3</td>
-								<td>At vero eos</td>
-								<td>Lorem ipsum</td>
-								<td>Sed ut</td>
-								<td>Dolor sit amet</td>
-								<td><a href="#">Epd.</a></td>
+								<td>Italy</td>
+								<td>60,243,406</td>
+								<td>124,632</td>
+								<td>20,996</td>
+								<td>15,362</td>
 							</tr>
 							<tr>
 								<td>4</td>
-								<td>Dolor sit amet</td>
-								<td>At vero eos</td>
-								<td>Lorem ipsum</td>
-								<td>Sed ut</td>
-								<td><a href="#">Epd.</a></td>
+								<td>Germany</td>
+								<td>83,149,300</td>
+								<td>97,047</td>
+								<td>23,192</td>
+								<td>1,476</td>
 							</tr>
 							<tr>
 								<td>5</td>
-								<td>At vero eos</td>
-								<td>Lorem ipsum</td>
-								<td>Sed ut</td>
-								<td>Dolor sit amet</td>
-								<td><a href="#">Epd.</a></td>
+								<td>China</td>
+								<td>1,402,073,720	</td>
+								<td>81,669</td>
+								<td>76,964</td>
+								<td>3,329</td>
 							</tr>
 						</tbody>
 					</table>
