--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,15 @@
 		<meta name="description" content="">
 		<meta name="keywords" content="">
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
+						<!-- Global site tag (gtag.js) - Google Analytics -->
+				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157604525-2"></script>
+				<script>
+				window.dataLayer = window.dataLayer || [];
+				function gtag(){dataLayer.push(arguments);}
+				gtag('js', new Date());
+
+				gtag('config', 'UA-157604525-2');
+				</script>
 	</head>
 	<body>
 		<div class="wrapper">
