--- a/index.htm
+++ b/index.htm
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>COVID-19 coronavirus</title>
-		<meta name="description" content="">
-		<meta name="keywords" content="">
+		<title>COVID-19 Coronavirus</title>
+		<meta name="description" content="Coronavirus news april, statistics death">
+		<meta name="keywords" content="coronavirus, death, virus, COVID-19, usa, europa, news, new, statistic, map, information, april, Prevention, spread, Sex">
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 						<!-- Global site tag (gtag.js) - Google Analytics -->
 				<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157604525-2"></script>
@@ -33,7 +33,7 @@
 				<div class="itemSlider">
 					<div class="bgSlide"><img src="images/bg-slide.jpg"></div>
 					<div class="descSlide">
-						<h1>Stay Home!</h1>
+						<h1>News , statistic, map, death</h1>
 						<p>Save lives</p>
 						<span>News every day!</span>
 						<p>Last updated: 8 April 02:10:04 UTC+7</p>
