--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
 				<div class="itemSlider">
 					<div class="bgSlide"><img src="images/bg-slide.jpg"></div>
 					<div class="descSlide">
-						<h1>News , statistic, map, death</h1>
+						<h1>News map death</h1>
 						<p>Save lives</p>
 						<span>News every day!</span>
 						<p>Last updated: 9 April 02:10:04 UTC+7</p>
